# filmulator-gui

./: .gitignore  .travis.yml  ARCHITECTURE.md  CMakeLists.txt  CompilerChecks.cmake  LICENSE  LICENSE.txt  README.md  azure-pipelines.yml  filmulator_build.iss  release_instructions.md
Filmulator-Testing-2/: Filmulator-Testing-2.pro  main.cpp
Filmulator-Testing-2/core/: agitate.cpp  color_curves.cpp  curves.cpp  develop.cpp  diffuse.cpp  exposure.cpp  filmimageprovider.cpp  filmimageprovider.h  filmsim.hpp  filmulate.cpp  imagePipeline.cpp  imagePipeline.h  imload.cpp  imread.cpp  imreadJpeg.cpp  imread_jpeg.cpp  imread_tiff.cpp  imwrite.cpp  imwrite_jpeg.cpp  imwrite_tiff.cpp  initialize.cpp  interface.h  layer_mix.cpp  lut.hpp  matrix.hpp  mergeExps.cpp  merge_exps.cpp  output_file.cpp  postprocess.cpp  postprocess.cpp~  read_args.cpp  rotate_image.cpp  timeDiff.cpp  vibranceSaturation.cpp  vibrance_saturation.cpp  whiteBalance.cpp  white_balance.cpp  whitepoint_blackpoint.cpp
Filmulator-Testing-2/database/: dbsetup.cpp  exifFunctions.cpp  exiffunctions.cpp  exiffunctions.h  filmulatorDB.h  filmulatordb.h  organizeModel.h  organizeinsertion.cpp  organizemodel.cpp  organizemodel.h  organizeproperties.cpp  sqlmodel.cpp  sqlmodel.h  sqlproperties.cpp
Filmulator-Testing-2/qml/Filmulator-Testing-2/: Edit.qml  EditTools.qml  Import.qml  Organize.qml  generateHistogram.js  main.qml
Filmulator-Testing-2/qml/Filmulator-Testing-2/gui_components/: ImportDirEntry.qml  ImportTextEntry.qml  OrganizeDelegate.qml  SSlider.qml  ToolButton.qml  ToolCheckbox.qml  ToolSlider.qml  ToolSwitch.qml  ToolTip.qml
Filmulator-Testing-2/ui/: filmImageProvider.cpp  filmImageProvider.h  filmimageprovider.cpp  filmimageprovider.h  settings.cpp  updateHistograms.cpp
PKGBUILD/LibRaw/: PKGBUILD
cmake/Modules/: CheckCXXCompilerFlagSSP.cmake  FindExiv2.cmake  FindLENSFUN.cmake  Findlibraw.cmake
filmulator-gui/: CMakeLists.txt  CompilerChecks.cmake  ConfigureChecks.cmake  config.h.cmake  filmulator-gui.desktop.in  filmulator-gui.pro  main.cpp  qml.qrc  tl.qrc
filmulator-gui/Halide/: HSVtoRGB.cpp  RGBtoHSV.cpp  applyfilmlikecurve.cpp  calcLayerMix.cpp  calcReservoirConcentration.cpp  compareSim.m  demosaic.cpp  develop.cpp  diffuse.cpp  downscaleDiffuse  downscaleDiffuse.cpp  downscaleDiffuse.cpp~  filmSim.m  filmulate  filmulate.cpp  generateFilmulatedImage.cpp  halideFilmulate.h  makefile  performLayerMix.cpp  postFilmulatorPipeline.cpp  runFilmulator.cpp  setupFilmulator.cpp  testFilmulate.m  vibranceSaturation.cpp
filmulator-gui/Halide/include/: Halide.h
filmulator-gui/appimage/: AppRun
filmulator-gui/cmake/Modules/: AddCXXCompilerFlag.cmake  FindExiv2.cmake
filmulator-gui/core/: colorCurves.cpp  colorSpaces.cpp  curves.cpp  develop.cpp  diffuse.cpp  exposure.cpp  filmSim.hpp  filmulate.cpp  filmulator.cpp  imagePipeline.cpp  imagePipeline.h  imload.cpp  imread.cpp  imreadJpeg.cpp  imreadTiff.cpp  imwrite.cpp  imwriteJpeg.cpp  imwriteTiff.cpp  interface.h  layerMix.cpp  lut.hpp  matrix.hpp  outputFile.cpp  rotateImage.cpp  scale.cpp  timeDiff.cpp  vibranceSaturation.cpp  whiteBalance.cpp  whitepointBlackpoint.cpp
filmulator-gui/core/nlmeans/: bisecting_kmeans.cpp  calcC1chanT.cpp  calcW_generic.cpp  expandDims.cpp  highDimBoxFilter.cpp  kMeansNLMApprox.cpp  nlmeans.hpp  splitCluster.cpp
filmulator-gui/core/rawtherapee/: FTblockDN.cc  boxblur.cc  boxblur.h  cplx_wavelet_dec.cc  cplx_wavelet_dec.h  cplx_wavelet_filter_coeffs.h  cplx_wavelet_level.h  gauss.cc  helpersse2.h  impulse_denoise.cc  labimage.cc  labimage.h  rt_math.h  rt_routines.h
filmulator-gui/database/: backgroundPipeline.h  backgroundQueue.h  basicSqlModel.cpp  basicSqlModel.h  camconst.cpp  camconst.h  database.cpp  database.hpp  dateHistogramModel.cpp  dateHistogramModel.h  dbSetup.cpp  exifFunctions.cpp  exifFunctions.h  filmulatorDB.h  importModel.cpp  importModel.h  importProperties.cpp  importWorker.cpp  importWorker.h  organizeInsertion.cpp  organizeModel.cpp  organizeModel.h  organizeProperties.cpp  queueModel.cpp  queueModel.h  signalSwitchboard.cpp  signalSwitchboard.h  sqlInsertion.cpp  sqlInsertion.h  sqlModel.cpp  sqlModel.h
filmulator-gui/database/rawproc_lensfun/: lensfun_dbupdate.cpp  lensfun_dbupdate.h
filmulator-gui/qml/: CMakeLists.txt
filmulator-gui/qml/filmulator-gui/: CMakeLists.txt  Edit.qml  EditTools.qml  Import.qml  Organize.qml  Queue.qml  Settings.qml  colors.js  generateHistogram.js  getRoot.js  main.qml
filmulator-gui/qml/filmulator-gui/gui_components/: CMakeLists.txt  FilmProgressBar.qml  ImportDirEntry.qml  ImportFileEntry.qml  ImportTextEntry.qml  OrganizeDelegate.qml  QueueDelegate.qml  SlideySwitch.qml  SlimSplitView.qml  SlipperySlider.qml  ToolButton.qml  ToolButtonStyle.qml  ToolCalendar.qml  ToolRadioButton.qml  ToolRadioButtonStyle.qml  ToolSlider.qml  ToolSwitch.qml  ToolTip.qml
filmulator-gui/qml/filmulator-gui/i18n/: CMakeLists.txt  README.md  qml_de.qm  qml_de.ts  qml_pt.qm  qml_pt.ts
filmulator-gui/resources/: pixmaps.qrc
filmulator-gui/resources/macos/: Info.plist  filmulator-gui  icon.icns
filmulator-gui/translations/: README.md  filmulator-gui_de.qm  filmulator-gui_de.ts
filmulator-gui/ui/: filmImageProvider.cpp  filmImageProvider.h  lensSelectModel.cpp  lensSelectModel.h  parameterManager.cpp  parameterManager.h  settings.cpp  settings.h  thumbWriteWorker.cpp  thumbWriteWorker.h  updateHistograms.cpp
patches/: libraw-makefile.patch  patchmaking.md
