INSTALL(
    FILES
        colors.js
        Organize.qml
        getRoot.js
        main.qml
        Edit.qml
        Queue.qml
        Import.qml
        EditTools.qml
        Settings.qml
        generateHistogram.js
    DESTINATION
        ${CMAKE_INSTALL_DATADIR}/Filmulator/qml/filmulator-gui
)
ADD_SUBDIRECTORY(gui_components)
